--- a/CRA-eslint-prettier/.eslintrc
+++ b/CRA-eslint-prettier/.eslintrc
@@ -1,11 +1,9 @@
 {
-  "extends": [
-    "react-app"
-  ],
-  "plugins": [
-    "prettier"
-  ],
+  "extends": ["react-app"],
+  "plugins": ["prettier", "react-hooks"],
   "rules": {
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
