--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,19 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Misc
+yarn.lock
+package-lock.json
+
+.idea
+.vscode
