--- a/CRA-typescript-eslint-prettier/.eslintrc
+++ b/CRA-typescript-eslint-prettier/.eslintrc
@@ -1,12 +1,17 @@
 {
   "extends": [
     "eslint:recommended",
+    "prettier",
     "plugin:react/recommended",
     "plugin:@typescript-eslint/recommended",
-    "prettier/@typescript-eslint",
     "plugin:prettier/recommended"
   ],
-  "plugins": ["react", "@typescript-eslint", "prettier", "react-hooks"],
+  "plugins": [
+    "react",
+    "@typescript-eslint",
+    "prettier",
+    "react-hooks"
+  ],
   "env": {
     "browser": true,
     "jasmine": true,
