--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,28 @@
-# General
+# Dependencies
+/node_modules
+
+# Production
+/build
+
+# Generated files
+.cache-loader
+
+# Misc
 .DS_Store
-.AppleDouble
-.LSOverride
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-
-# Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
-# Misc
 yarn.lock
 package-lock.json
 
 .idea
 .vscode
-.DS_Store
+.temp
+files
+*.zip
