--- a/CRA-typescript-eslint-prettier/.eslintrc
+++ b/CRA-typescript-eslint-prettier/.eslintrc
@@ -18,7 +18,7 @@
     "jest": true
   },
   "rules": {
-    "prettier/prettier": "error",
+    "prettier/prettier": "warn",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn"
   },
