--- a/node-express-commonjs/package.json
+++ b/node-express-commonjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server-require-price123",
+  "name": "node-express-commonjs",
   "version": "0.0.0",
   "private": true,
   "scripts": {
