--- a/nextjs-13-js/.eslintrc.json
+++ b/nextjs-13-js/.eslintrc.json
@@ -14,6 +14,14 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "alias": {
+        "map": [
+          ["@", "."]
+        ],
+        "extensions": [".js", ".jsx", ".ts", ".tsx", ".css", ".scss"]
+      }
     }
   },
   "extends": [
@@ -21,22 +29,19 @@
     "plugin:react/recommended",
     "plugin:react-hooks/recommended",
     "plugin:jsx-a11y/recommended",
+    "plugin:import/errors",
     "next",
     "next/core-web-vitals",
     "prettier"
   ],
-  "plugins": [
-    "jsx-a11y",
-    "react",
-    "react-hooks",
-    "prettier"
-  ],
+  "plugins": ["jsx-a11y", "react", "react-hooks", "prettier"],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/react-in-jsx-scope": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "react/prop-types": "off",
-    "prettier/prettier": "warn"
+    "prettier/prettier": "warn",
+    "no-unused-vars": "warn"
   }
 }
