--- a/node-express-es6/package.json
+++ b/node-express-es6/package.json
@@ -8,7 +8,6 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "eslint-config-prettier": "^6.11.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
@@ -19,10 +18,11 @@
     "eslint": "^7.5.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
+     "eslint-config-prettier": "^6.11.0",
     "nodemon": "^1.19.4",
     "prettier": "^2.0.5"
   },
-  "type": "commonjs",
+  "type": "module",
   "engines": {
     "node": ">=8.10.0"
   }
